--- a/uimodule/webapp/i18n/i18n_en.properties
+++ b/uimodule/webapp/i18n/i18n_en.properties
@@ -1,3 +1,3 @@
-title=com.te.teProjects
-appTitle=com.te.teProjects
-appDescription=App Description
+title=our TE projects
+appTitle=our TE Projects
+appDescription=Sapui5 Apps for beginners
